# astrophoto

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile.backend  Dockerfile.frontend  EDGE_CASES.md  README.md  compose.yml  justfile
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-004a4ea24e88ef5b402df46eccb4ed76af2de26bd50e75eeb5b615d7a9525f4b.json  query-005d82ad8f3af298ccdbcb3b5ae239fdaacb94272a55f3c0f72b39cdfc860d33.json  query-00cd25e0811d199bd5002efa03b7c677c7a032f5611bd32bc5115a3ea190e2e8.json  query-00d1bf40885b01d68f7cb19d15fafd1ab65fea10fd61ca9b4e13bac5e2c2036b.json  query-00e0252ed132f536216d7eb528cf47c710ac77b8485f1caedf525dddc027517c.json  query-0119d9d875053843cc3b5187d5fb61e883418ced3209c99c01dc07e0960551e8.json  query-012c0e0485c18c48faa891c62a28568394a844e61407a7eda70ba0e35c6793fe.json  query-015dcdf391bc0daa1187fd34a75f34847d99531aba320a29018460fa94257db5.json  query-019296dabf458c6fb0b57750ccde0ba3c696b86d883959bcbba4ea0234eccc82.json  query-020f951e064e8241e33e4c7637318d1f1630062afb8af78efb50d6f9f8a765fe.json  query-026834661da0f3c7d7515c200610a8b707185c48d541827d2c2fff6d49ae150f.json  query-02c40489dc2027072d4effd9c4c630b3be018c1284b426bac727d1dc1b406793.json  query-0321fbcc6e24048bd37a8cc943a96f89cac9e2f50d252c73ee1a0405c649ba4b.json  query-036c3b3f006035d399bd891720ec24ec7a54496da486f4ff9a64657ff6fa28f4.json  query-037fc06d75bc7e33c8b338fcee643b872a48562fc51ae86a7d378abc692df921.json  query-039fbd4c1fdcf7b6ceedd93f7269d2269748b7cd99f262e12a2b752b46138e62.json  query-03d0caa621ce8d6c2f027e9e37dcfe5c988b3aef89f99cfd6208e400dcdc89c7.json  query-03d99055bba3722e18913125984dcc897d3b1e2578b32d65f42c2a697311dd54.json  query-03fb8cef41f8eeca1c9e4c7d8f42ca78e4e71715bb7f53996e4d1fddde0dd803.json  query-04307813c203560871bc647c642be277927de877f746c66540b3e47e8a41b2d9.json  query-044565c02fbc85fcb6ebd706b2c51a8445fa7935ec6fc62117687f7791d16b28.json  query-05a131d009691eb1e0d3ddd150cb912325fddf4363ae3ea91d7ddf61a3b4c7f1.json  query-062faf87832851f2a183f30d71871d08988008d77af62bad0340eb5ec90b2d3d.json  query-0671ad7045cecff789d714c526d03e90a8bf3fd5aacfac51f99822cf7a688ff8.json  query-06d4588811d4314a024643fa630d5b31c27fb5465d9f2113c195ccd4b39d94ef.json  query-06f4c9b920bbd01c72fc97f20b3b824d65bb3fb25d7e9c37266c5f1197dcf0eb.json  query-06fe7d009b6f9b4f4e4e0c872131517cc2801c1c55fed190427ada60f9a6cf9d.json  query-070ba38252c5f7d3b094af35509e64da333936bc97beb48c1b77e67376c45d41.json  query-0762989e4d37266e640b0b36d0eeaf84f826348bf292b8538c6aa4015ec05e31.json  query-07c708592887be00ba2db20e11da90ea5d9d098331b4c0ffff698de47ebf710d.json  query-0806ed4cbe80da2df9ea7ca6604dee281094900990c0dd0455af7b930d0ee08e.json  query-08e9c5c2030ebbd0b0ea6c82f303fc9708590a5bd55bb07ceab1bfa7ba7bdd79.json  query-098d1779520d24bde45d8cd3bf0129203ab0ac8200855dc69846b6458d6ddb4d.json  query-09b007503db04f77c4ef57ef9ce46030b2cc72d2f3d9ebcbdd032f3ac65e6b07.json  query-09fb5cdb62dcd38b09555b263094d3b2239f225026a30b9f0d7fed7b221065a2.json  query-0a4b17708abd4406aab88f7d46bf8102d2d84de485628a6632e5c295dd855918.json  query-0a54409f39c7bb227dd79b30d93a4f9491f0f14cf805ec3760f2c4e9ce7673ff.json  query-0ad502369e99a6875bc630d26eede8c37da8c101596552ee2769ca5a5e35745f.json  query-0b1870dd9e8b57cfe775e9166e6a11752242491ec7c9b6457160d1c68e8cd385.json  query-0ba2c9e1b1d10d2330ebe18439fb9ba3dbc6578bb6cd9eefea99c3bab7cefdad.json  (+831 more)
backend/assets/: common-passwords.txt
backend/bindings/: Health.ts
backend/data/: bio-allowed-tags.json  reserved_handles.txt
backend/examples/: gen_fixture.rs
backend/migrations/: 0001_init.sql  0002_engagement.sql  0003_security_account.sql  0004_drafts_replace.sql  0005_handles.sql  0006_user_tier.sql  0007_photo_short_and_display.sql  0008_user_profile.sql  0009_photo_featured_category.sql  0010_targets_tags.sql  0011_appreciations_count.sql  0012_equipment_items.sql  0013_add_photo_extended_exif.sql  0014_equipment_setups.sql  0014_targets_astro_meta.sql  0015_pretty_canonical_names.sql  0016_email_verification.sql  0018_equipment_catalog_enriched.sql  0019_setup_default_apply_mode.sql  0020_backfill_equipment_items_approved_at.sql  0021_photos_platesolve.sql  0022_equipment_catalog_v2.sql  0023_photos_processing_json.sql  0024_resync_appreciations_count.sql  0025_add_photo_filter_integrations.sql  0026_targets_pgc.sql  0027_login_throttle.sql  0028_photos_explore_indexes.sql  0029_targets_opposition.sql  0030_add_user_avatar.sql  0031_add_user_is_admin.sql  0032_app_settings.sql  0033_add_api_tokens.sql  0034_add_calibration_requested_at.sql  0035_targets_trgm_indexes.sql  0036_photo_targets_primary_uidx.sql  0037_fk_support_indexes.sql  0038_photos_integration_s.sql  0039_owner_hash_dedup_excludes_failed.sql
backend/src/: api_types.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  settings.rs
backend/tests/: admin.rs  api_tokens.rs  auth.rs  avatar.rs  batch_apply.rs  batch_publish.rs  cdn_dev.rs  celestial_identify.rs  cleanup.rs  cover_set.rs  csrf_guard.rs  discovery_category.rs  discovery_equipment.rs  discovery_explore.rs  discovery_photographers.rs  discovery_search.rs  discovery_tag.rs  discovery_target.rs  drafts_list.rs  (+48 more)
(+659 files in other folders)
