[package]
name = "astrophoto"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "astrophoto"

[lib]
name = "astrophoto"
path = "src/lib.rs"

[[bin]]
name = "astrophoto"
path = "src/main.rs"

[[bin]]
name = "gen-types"
path = "src/bin/gen-types.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "seed-targets"
path = "src/bin/seed_targets.rs"

[[bin]]
name = "backfill-photo-targets"
path = "src/bin/backfill_photo_targets.rs"

[[bin]]
name = "backfill-processing"
path = "src/bin/backfill_processing.rs"

[dependencies]
# HTTP / runtime
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "set-header"] }
hyper = "1"

# DB
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls", "postgres", "macros", "migrate",
    "uuid", "chrono", "ipnetwork", "json", "bigdecimal"
] }

# Errors / config / logging
thiserror = "1"
anyhow = "1"  # main.rs only
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
figment = { version = "0.10", features = ["env", "toml"] }

# Auth / crypto
argon2 = "0.5"
oauth2 = { version = "4", default-features = false, features = ["rustls-tls"] }
rand = "0.8"
base64 = "0.22"
roxmltree = "0.20" # read-only XISF header XML parsing
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
sha2 = "0.10"

# Storage / images
aws-sdk-s3 = "1"
aws-config = "1"
async-trait = "0.1"
blurhash = "0.2"
bytes = "1"
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }

# Mail
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls", "smtp-transport", "builder"
] }

# Misc
ammonia = "4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nanoid = "0.4"
validator = { version = "0.18", features = ["derive"] }
ts-rs = { version = "10", features = ["chrono-impl", "uuid-impl"] }
woothee = "0.13"
url = "2"
dotenvy = "0.15.7"
csv = "1"
flate2 = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
figment = { version = "0.10", features = ["env", "toml", "test"] }
http-body-util = "0.1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["full", "test-util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.dev]
opt-level = 0
debug = 1
